--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@
 }
 
 .header__links-list {
-  max-height: 21;
   gap: 32px;
 }
 
@@ -47,7 +46,7 @@
 }
 
 .address {
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -62,6 +61,8 @@
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   opacity: 0.6;
@@ -120,7 +121,7 @@
   z-index: 1;
   color: #fff;
   text-align: center;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -133,12 +134,11 @@
   position: relative;
   z-index: 1;
   background-color: transparent;
-  width: 257px;
-  height: 52px;
+  padding: 12px 32px;
   border: 1px solid #fff;
   color: #fff;
   text-align: center;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -147,12 +147,13 @@
 }
 
 .lots {
+  margin: auto;
   padding: 180px 50px 181px 50px;
 }
 
 .lots__heading {
   color: #000;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -174,7 +175,7 @@
   position: relative;
   z-index: 1;
   color: #fff;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -188,46 +189,47 @@
   position: relative;
   z-index: 1;
   color: #fff;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
   padding: 0px 40px 50px 40px;
+  text-decoration: none;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  min-width: 430px;
+  min-height: 450px;
   position: relative;
-  width: 430px;
-  height: 450px;
+  list-style: none;
+  background-size: cover;
 }
 
 .card_type_film {
-  position: relative;
-  background-size: cover;
   background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  position: relative;
-  background-size: cover;
   background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  position: relative;
-  background-size: cover;
   background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link {
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lots__look-more-link {
   display: block;
   padding: 30px 1108px 2px 40px;
   color: #000;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -238,8 +240,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   justify-content: space-between;
-  gap: 25px;
-  padding: 0% 50px 0px 50px;
+  padding: 0px 50px 0px 50px;
 }
 
 .about__logo {
@@ -259,9 +260,9 @@
 
 .about__title {
   display: flex;
-  padding: 100px 0px;
+  padding: 100px 0px 0px 10px;
   color: #000;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -269,18 +270,21 @@
   text-transform: uppercase;
 }
 
+.about__column {
+  width: 885px;
+}
+
 .about__text {
-  margin-bottom: 25px;
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
   color: #000;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-}
-
-.no-margin-bottom {
-  margin-bottom: 0px;
+  padding: 100px 0px 0px 8px;
 }
 
 .footer {
@@ -292,7 +296,7 @@
 .footer__menu-list {
   color: #000;
   text-align: center;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -316,7 +320,6 @@
 .footer__social-list {
   display: flex;
   width: 240px;
-  height: 48px;
   justify-content: space-between;
 }
 
